<resources>
    <string name="app_name">Converg</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Sign in</string>

    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="sports">Sports</string>
    <string name="performance">Performance</string>
    <string name="academic">Academic</string>
    <string name="social">Social</string>
    <string name="gaming">Gaming</string>
    <string name="other">Other</string>

    <!-- MYSTRINGS -->
    <string name="welcome_header_1">Welcome to Converg!</string>
    <string name="welcome_desc_1">Converg is a locale-based event finder.
        That means everything fun happening nearby can be found here.</string>

    <string name="welcome_header_2">Things to Know</string>
    <string name="welcome_desc_2">1. All events on fumono are open to
        everyone\n2. Anyone can post an event to fumono\n3.
        Any event is welcome (study sessions, beach trips, night socials, etc.) </string>

    <string name="welcome_header_3">Converg Guidelines</string>
    <string name="welcome_desc_3">1. Be nice\n2. Don\'t be shy\n3. Have fun</string>

    <string name="welcome_header_4">Guideline Number Two: Be Inviting</string>
    <string name="welcome_desc_4">Every event on fumono is open to everyone.
        Treat every person you meet like a friend, and they might become one.</string>

    <string name="welcome_header_5">Guideline Number Three: Don\'t Be Shy</string>
    <string name="welcome_desc_5">You\'ve never been in higher demand.
        Every host wants YOU at their event. Don\'t be afraid to explore something new!</string>

    <string name="welcome_header_FAQ">Frequently Asked Questions</string>

    <string name="welcome_header_6">You\'re Ready!</string>
    <string name="welcome_desc_6">Go out and find your next adventure.</string>

    <!-- Strings related to login -->
    <string name="facebook_app_id">1071049549602950</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_title">"Project 18"</string>
    <string name="title_activity_map">MapAct</string>
    <string name="title_activity_event_info">EventInfoAct</string>
    <string name="title_activity_login">LoginAct</string>

    <string-array name="event_types">
        <item>Pick an Event Type</item>
        <item>Sports</item>
        <item>Food</item>
        <item>Party</item>
        <item>Fundraiser</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list">ListAct</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_logout">LogoutAct</string>
    <string name="title_activity_test_drawer">testDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_add_trails">AddTrailsAct</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_invite_user">invite_user</string>
</resources>
