<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stazo.project_18.toolbar">

    <!--<item
        android:id="@+id/game"
        android:icon="@drawable/gameicon"
        app:showAsAction="always"
        android:title="game"
        android:orderInCategory="1">
    </item> -->

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <group android:checkableBehavior="all">
        <item android:id="@+id/all"
            android:title="@string/all"
            android:orderInCategory="1"
            android:checked="true">
            app:showAsAction="never"
        </item>
        <item android:id="@+id/food"
            android:title="@string/food"
            android:orderInCategory="1">
            app:showAsAction="never"
        </item>

        <item android:id="@+id/sports"
            android:title="@string/sports"
            android:orderInCategory="2"
            app:showAsAction="never"/>

        <item android:id="@+id/performance"
            android:title="@string/performance"
            android:orderInCategory="3"
            app:showAsAction="never"/>
        <item android:id="@+id/academic"
            android:title="@string/academic"
            android:orderInCategory="1">
            app:showAsAction="never"
        </item>
        <item android:id="@+id/social"
            android:title="@string/social"
            android:orderInCategory="1">
            app:showAsAction="never"
        </item>
        <item android:id="@+id/gaming"
            android:title="@string/gaming"
            android:orderInCategory="1">
            app:showAsAction="never"
        </item>
        <item android:id="@+id/other"
            android:title="@string/other"
            android:orderInCategory="1">
            app:showAsAction="never"
        </item>
    </group>




</menu>